<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_above="@+id/weather_description"
            android:layout_alignStart="@+id/weather_description"
            android:layout_marginBottom="-69dp"
            android:background="@drawable/w_cloud_svg"
            android:scaleType="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="26dp"
            android:layout_marginTop="10dp"
            android:text="@string/juja_kenya"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/temperatureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-42dp"
            android:layout_marginTop="55dp"
            android:layout_toEndOf="@+id/textView"
            android:fontFamily="sans-serif-condensed"
            android:maxLength="3"
            android:text="@string/_25"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="-44dp"
            android:layout_toEndOf="@+id/temperatureText"
            android:text="@string/description_here"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/temperature_main_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/weather_description"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="0dp"
            android:text="@string/u00b0c" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignBottom="@+id/temperatureText"
            android:background="@color/colorMyBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="serif"
            android:text="@string/source_openweathermap"
            android:textSize="12sp" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_location_on_light_green_a200_24dp"/>
    </RelativeLayout>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/wi_humidity_svg"
            android:scaleType="center" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hval" />
    </TableRow>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="5dp">

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="center"
            android:background="@drawable/wi_barometer_svg" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_pressure" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/air_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mbar" />

    </TableRow>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="5dp">

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="center"
            android:background="@drawable/wi_na_svg" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibility" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/visibility_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metres" />
    </TableRow>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="5dp">

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/wi_thermometer_exterior_svg"
            android:scaleType="center" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_range" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/temp_min_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_u00b0c_t" />

        <TextView
            android:id="@+id/temp_max_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_u00b0c" />
    </TableRow>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="5dp">

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/wi_windy_svg"
            android:scaleType="center" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/wind_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kph" />

        <View
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/wi_wind_deg_svg"
            android:scaleType="center" />

        <TextView
            android:id="@+id/wind_angle_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u00b0" />

    </TableRow>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="5dp">

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/w_cloud_svg"
            android:scaleType="center" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud_cover" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/cloud_cover_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/per" />

    </TableRow>
</LinearLayout>